# MagnetarEidolon

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BITACORA.md  BLOCKERS.md  BRANCHING_MODEL.md  CONTRIBUTING.md  Dockerfile  LICENSE  NEW_PLAN.md  PLAN.md  README.md  RELEASE_NOTES_TEMPLATE.md  RELEASING.md  REQUIREMENTS.md  RULES.md  STATUS.md  TESTING.md  WIP_GUIDELINES.md  dev.sh  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/scripts/: validate_release_notes.py
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-typescript-ui.yml  (+13 more)
branches/: README.md
config/: providers.catalog.json  providers.local.example.json
docs/: CANVAS_RENDERER_ROADMAP.md  CONFIG_DRIVEN_PROVIDER_BACKEND.md  MAGNETAR_TECHNOLOGY_STACK.md  UI_RUNTIME_BOOTSTRAP_PLAN.md
magnetar_voice_ui/: .gitignore  app.py  core.py  pyproject.toml
magnetar_voice_ui/tests/: test_core.py
projects/: _template.project.yml  api-connectors-module-skeleton.project.yml  cross-platform-ui-skeleton.project.yml  magnetar-voice-ui.project.yml  observability-replay-module.project.yml  system-interaction-module-skeleton.project.yml
scripts/: ensure_pycharm_compatibility.py  validate-project-schema.mjs  validate-project-schema.spec.mjs  validate-required-docs.mjs  validate-required-docs.spec.mjs
src/: main.py
tests/: test_agent.py  test_api_connectors.py  test_cross_platform_ui.py  test_llm.py  test_memory.py  test_model.py  test_modules_skeleton.py  test_tools.py
typescript-angular-skeleton/: README.md  angular.json  package.json  tsconfig.cli.json
(+255 files in other folders)
