[tool.poetry]
name = "magnetar-eidolon"
version = "0.1.0"
description = "Cross-OS Autonomous Agent Framework with Separated Cognition State"
authors = ["Magnetar Team <team@magnetar.ai>"]
readme = "README.md"
packages = [{include = "magnetar", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7"
litellm = "^1.35"
chromadb = "^0.5"
typer = "^0.12"
httpx = "^0.27"
beautifulsoup4 = "^4.12"
trafilatura = "^1.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
black = "^24.4"
ruff = "^0.4"
mypy = "^1.10"
pytest-cov = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
